Closed Bug 1909610 Opened 7 months ago Closed 7 months ago

Crash in [@ mozilla::WMFVideoMFTManager::UseZeroCopyVideoFrame]

Categories

(Core :: Audio/Video: Playback, defect)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
130 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox128 --- unaffected
firefox129 --- unaffected
firefox130 + fixed

People

(Reporter: aryx, Assigned: sotaro)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

13 crashes from 6 installs on Windows.

Crash report: https://crash-stats.mozilla.org/report/index/0715cebc-edaa-40d0-8b4e-fd0a20240724

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames:

0  xul.dll  mozilla::WMFVideoMFTManager::UseZeroCopyVideoFrame() const  dom/media/platforms/wmf/WMFVideoMFTManager.cpp:1051
1  xul.dll  mozilla::WMFMediaDataDecoder::ProcessOutput(nsTArray<RefPtr<mozilla::MediaDat...  dom/media/platforms/wmf/WMFMediaDataDecoder.cpp:161
2  xul.dll  mozilla::WMFMediaDataDecoder::ProcessDecode(mozilla::MediaRawData*)  dom/media/platforms/wmf/WMFMediaDataDecoder.cpp:111
3  xul.dll  mozilla::detail::RunnableMethodArguments<mozilla::MediaRawData*>::apply<mozil...  xpcom/threads/nsThreadUtils.h:1085
3  xul.dll  std::invoke(mozilla::detail::RunnableMethodArguments<mozilla::MediaRawData*>:...  /builds/worker/fetches/vs/VC/Tools/MSVC/14.39.33519/include/type_traits:1739
3  xul.dll  std::_Apply_impl(mozilla::detail::RunnableMethodArguments<mozilla::MediaRawDa...  /builds/worker/fetches/vs/VC/Tools/MSVC/14.39.33519/include/tuple:1077
3  xul.dll  std::apply(mozilla::detail::RunnableMethodArguments<mozilla::MediaRawData*>::...  /builds/worker/fetches/vs/VC/Tools/MSVC/14.39.33519/include/tuple:1088
3  xul.dll  mozilla::detail::RunnableMethodArguments<mozilla::MediaRawData*>::apply(mozil...  xpcom/threads/nsThreadUtils.h:1083
3  xul.dll  mozilla::detail::MethodCall<mozilla::MozPromise<nsTArray<RefPtr<mozilla::Medi...  xpcom/threads/MozPromise.h:1686
3  xul.dll  mozilla::detail::ProxyRunnable<mozilla::MozPromise<nsTArray<RefPtr<mozilla::M...  xpcom/threads/MozPromise.h:1706
Flags: needinfo?(sotaro.ikeda.g)
Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a0d1aa84dd7e Add mDXVA2Manager check in WMFVideoMFTManager::UseZeroCopyVideoFrame() r=media-playback-reviewers,alwu
Status: NEW → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: