dom/media/platforms/wmf/WMFVideoMFTManager.cpp
@@ -1048,7 +1048,8 @@ nsCString WMFVideoMFTManager::GetCodecName() const {
 }
 
 bool WMFVideoMFTManager::UseZeroCopyVideoFrame() const {
-  if (mZeroCopyNV12Texture && mDXVA2Manager->SupportsZeroCopyNV12Texture()) {
+  if (mZeroCopyNV12Texture && mDXVA2Manager &&
+      mDXVA2Manager->SupportsZeroCopyNV12Texture()) {
     return true;
   }
   return false;
